shared/k8s/grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: csharp-ten-apps
spec:
  ports:
  - port: 3000
