shared/k8s/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: csharp-ten-apps
spec:
  ports:
  - port: 5432
