shared/k8s/prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: csharp-ten-apps
spec:
  ports:
  - port: 9090
