shared/k8s/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: csharp-ten-apps
spec:
  ports:
  - port: 6379
