shared/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ten-apps
  namespace: csharp-ten-apps
spec:
  rules: []
